--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -14,10 +14,11 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/user_image_update_profile"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            android:layout_gravity="center"
             android:layout_marginTop="45dp"
+            android:layout_gravity="center"
             android:src="@drawable/man"
             app:civ_border_color="@color/custom_black"
             app:civ_border_width="2dp" />
