--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -13,15 +13,36 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image_update_profile"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="45dp"
             android:layout_gravity="center"
-            android:src="@drawable/man"
-            app:civ_border_color="@color/custom_black"
-            app:civ_border_width="2dp" />
+            android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_image_update_profile"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:src="@drawable/man"
+                app:civ_border_color="@color/custom_black"
+                app:civ_border_width="2dp" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/upload_image_update_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="-40dp"
+                android:backgroundTint="@color/blue"
+                android:src="@drawable/baseline_photo_camera_24"/>
+        </LinearLayout>
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/viewFinder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <EditText
             android:id="@+id/et_name_from_update_profile"
