--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:orientation="horizontal"
     android:background="@color/white"
-    android:padding="10dp">
+    android:padding="20dp">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/please_wait"
-        android:textColor="@color/text_view"
+        android:textColor="@color/custom_black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/progressBar"
