--- a/app/src/main/res/layout/image_dialog_layout.xml
+++ b/app/src/main/res/layout/image_dialog_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/opposite_theme_color"
     android:layout_height="180dp">
 
     <RelativeLayout
@@ -18,7 +18,7 @@
             android:fontFamily="@font/poppins_bold"
             android:layout_marginTop="15dp"
             android:textSize="16sp"
-            android:textColor="@color/text_view"
+            android:textColor="@color/theme_color"
             android:layout_centerHorizontal="true"/>
 
         <LinearLayout
@@ -36,8 +36,9 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/baseline_photo_camera_24"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -46,7 +47,7 @@
                     android:fontFamily="@font/poppins"
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
-                    android:textColor="@color/text_view"
+                    android:textColor="@color/theme_color"
                     android:textSize="16sp"/>
 
             </LinearLayout>
@@ -58,8 +59,9 @@
                 android:layout_marginStart="30dp"
                 android:orientation="vertical">
                 <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/baseline_insert_photo_24"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -67,7 +69,7 @@
                     android:text="Gallery"
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
-                    android:textColor="@color/text_view"
+                    android:textColor="@color/theme_color"
                     android:fontFamily="@font/poppins"
                     android:textSize="16sp"/>
 
