--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,7 @@
 
     <color name="radioButtonSelected">#5D9CEC</color>
 
+    <color name="upaad">#D23131</color>
+    <color name="jamaa">#4B89DC</color>
+
 </resources>
