added Dashboard , Fragments pending : getting user data

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -27,4 +27,8 @@
 
     <color name="upaad">#D23131</color>
     <color name="jamaa">#4B89DC</color>
+
+    <color name="tasks_card_view_color">#323232</color>
+
+    <color name="fragment_home_bg">#4B89DC</color>
 </resources>
