--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,7 @@
     tools:context=".HomeFragment">
 
         <LinearLayout
+            android:id="@+id/ll_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -177,42 +178,47 @@
             <!--            android:text="Log Out"-->
             <!--            />-->
         </LinearLayout>
-        <androidx.cardview.widget.CardView
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/ll_card"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="1dp"
+        android:backgroundTint="@color/fragment_home_bg">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginStart="1dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="1dp"
-            android:backgroundTint="@color/fragment_home_bg"
-            android:layout_height="200dp">
-            <LinearLayout
-                android:background="@drawable/tasks_card_view"
+            android:layout_height="match_parent"
+            android:background="@drawable/tasks_card_view"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="15dp"
+                android:text="TODO Tasks"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/white" />
+
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TODO Tasks"
-                    android:textSize="15dp"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginTop="20dp"/>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@color/white"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp">
-                </androidx.recyclerview.widget.RecyclerView>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                tools:itemCount="5"
+                tools:listitem="@layout/task_layout"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
     </RelativeLayout>
