--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,11 +21,11 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="25dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="15dp"
                 app:cardBackgroundColor="@color/white"
                 android:backgroundTint="#FAFAFA"
                 app:cardCornerRadius="25dp"
-                app:cardElevation="10dp">
+                app:cardElevation="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -197,12 +197,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="15dp"
                 android:text="TODO Tasks"
+                android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/white"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <View
@@ -214,7 +215,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:itemCount="5"
+                tools:itemCount="6"
                 tools:listitem="@layout/task_layout"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
