--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -19,6 +19,7 @@
         android:id="@+id/bottomNavigationView_user_dashboard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/theme_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
